# libhy_utils-bak

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile.am  README.md  autogen.sh  build.sh  config.h.in  configure.ac  cross_build.sh  hy_utils.pc.in  libhy_utils.pc.in  package-lock.json  package.json
3rd_lib/libcjson/lib/: libcjson.so.1.7.14  libcjson_utils.so.1.7.14
build-aux/: generate-version.sh
example/: Makefile.am  cjson.c  demo  demo.c  hash.c  hy_arecord_demo.c  hy_cjson_test.c  hy_dir_test.c  hy_fifo_test.c  hy_list_test.c  hy_log4cplus_wrapper_test.c  hy_log_test.c  hy_md5sum_test.c  hy_net_wired_test.c  hy_signal_test.c  hy_socket_test.c  hy_sort_test.c  hy_template_test.c  hy_thread_test.c  hy_timer_test.c  hy_timerwheel_rotation_test.c  hy_uart_test.c  hy_utils_test.c  json.c  list.c  log4cplus.rc  main.c  md5sum.c  test.c  utils-demo_test.c
inc/: Makefile.am  bitmap_wrapper.h  common.h  core_dump.h  data_buf.h  file_wrapper.h  list.h  ringbuf.h  signal_wrapper.h  thread_wrapper.h  time_wrapper.h  tiny_things.h  uart_protocol.h  uart_protocol_inside.h  uart_protocol_v1.h  uart_wrapper.h  utils.h
include/: Makefile.am  hy_alsa.h  hy_assert.h  hy_at_utils.h  hy_bit.h  hy_bitset.h  hy_cjson.h  hy_cjson_file.h  hy_compile.h  hy_dir.h  hy_dlopen.h  hy_error.h  hy_fifo.h  hy_file.h  hy_list.h  hy_log.h  hy_log4cplus_wrapper.h  hy_math.h  hy_md5sum.h  hy_mem.h  hy_module.h  hy_net_wired.h  hy_pthread.h  hy_signal.h  hy_socket.h  hy_sort.h  hy_string.h  hy_thread.h  hy_time.h  hy_timer.h  hy_timerwheel_rotation.h  hy_type.h  hy_uart.h  hy_utils.h  utils-demo.h  utils_cjson.h  utils_cjson_file.h  utils_demo.h  utils_hash.h  utils_json.h  (+2 more)
keil_project/: libutils.uvopt  libutils.uvproj
keil_project/Objects/: libutils.lib
m4/: check_alsa_lib.m4  check_asound.m4  check_libcjson.m4  check_libhal.m4  check_libhy_hal.m4  check_liblog4cplus.m4  check_log4cplus.m4  check_pthread.m4  enable_feature.m4  enable_mcu_at32f407vgt7.m4  enable_mylog.m4  select_build_os.m4  select_mcu_cortex.m4  select_target_os.m4
res/: Doxyfile  Makefile.am  cjson.config
res/config/: Makefile.am  log4cplus.rc
res/m4/: check_doxygen.m4
res/script/: Makefile.am  echo.sh  version.sh
sample/: Makefile.am  data_buf_test.c  signal_wrapper_test.c  thread_wrapper_test.c  uart_test.c  uart_wrapper_test.c
src/: Makefile.am  bitmap_wrapper.c  core_dump.c  data_buf.c  databuf.c  file_wrapper.c  hy_alsa.c  hy_at_utils.c  hy_bit.c  hy_bitset.c  hy_cjson.c  hy_cjson_file.c  hy_dir.c  hy_dlopen.c  hy_fifo.c  hy_file.c  hy_log.c  hy_log4cplus_wrapper.cpp  hy_math.c  hy_md5sum.c  hy_mem.c  hy_net_wired.c  hy_pthread.c  hy_signal.c  hy_socket.c  hy_sort.c  hy_string.c  hy_thread.c  hy_time.c  hy_timer.c  hy_timerwheel_rotation.c  hy_uart.c  hy_utils.c  module_a.c  ringbuf.c  signal_wrapper.c  thread_wrapper.c  time_wrapper.c  uart_protocol.c  uart_protocol_v1.c  (+9 more)
