# basic header file
basic_inc = common.h \
			utils.h \
			signal_wrapper.h \
			thread_wrapper.h \
			list.h \
			databuf.h \
			time_wrapper.h \
			core_dump.h \
			bitmap_wrapper.h \
			file_wrapper.h

# uart header files
uart_inc = uart_wrapper.h \
		   uart_protocol.h \
		   uart_protocol_inside.h \
		   uart_protocol_v1.h

include_HEADERS = $(basic_inc) \
				  $(uart_inc)

