# ===============================================================
# 
# Release under GPL-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    21/03 2020 14:09
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        21/03 2020      create the file
# 
#     last modified: 21/03 2020 14:09
# ===============================================================

NO_INSTALL_HEADERS_COM  =
INSTALL_HEADERS_COM     =
install_includedir      = $(includedir)/@project_name@

# ----------------------------------------------------
NO_INSTALL_HEADERS_COM  +=

INSTALL_HEADERS_COM     += \
                           hy_assert.h \
                           hy_bitset.h \
                           hy_compile.h \
                           hy_error.h \
                           hy_fifo.h \
                           hy_list.h \
                           hy_log.h \
                           hy_math.h \
                           hy_mem.h \
                           hy_module.h \
                           hy_sort.h \
                           hy_string.h \
                           hy_type.h \
                           hy_utils.h

noinst_HEADERS          = $(NO_INSTALL_HEADERS_COM)
install_include_HEADERS = $(INSTALL_HEADERS_COM)

