# ===============================================================
# 
# Release under GPL-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    06/04 2020 21:55
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        06/04 2020      create the file
# 
#     last modified: 06/04 2020 21:55
# ===============================================================

if COMPILE_WITH_LIBCJSON_UTILS
resdir		  = ${prefix}/res
res_DATA	  = cjson.config
dist_res_DATA = cjson.config
endif

