# ===============================================================
# 
# Release under GPL-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    06/04 2020 21:55
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        06/04 2020      create the file
# 
#     last modified: 06/04 2020 21:55
# ===============================================================

SUBDIRS = config

# ------------------
# defining variables
# ------------------
_dist_file_com  =

# ---------------
# make dist files
# ---------------
_dist_file_com  += \
                   Doxyfile \
                   get_project_info.sh
EXTRA_DIST      = $(_dist_file_com)

