# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    03/06 2021 10:22
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        03/06 2021      create the file
# 
#     last modified: 03/06 2021 10:22
# ===============================================================

# ------------------
# defining variables
# ------------------
configdir = $(prefix)/res/config

# ------------------
# make install files
# ------------------
config_DATA = log4cplus.rc

